--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "docker:restart": "docker-compose restart backend"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "cookie": "^1.1.1",
+    "crypto-js": "^4.2.0",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "react": "19.2.3",
